[project]
name = "ros_oci_images"
description = "OCI Images for ROS"
version = "0.1.0"
authors = [
    { name = "Shane Loretz", email = "shane.loretz@gmail.com" }
]
license = {text = "Apache License 2.0"}

[project.scripts]
ros-oci-images = "ros_oci_images.__main__:main"

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]